--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.1",
+    "jimp": "^0.2.28",
     "wda": "^1.0.0",
     "wda-driver": "^1.0.2"
   }
